updated at: 2020-01-26 03:17, VRC/VRM/MMD向け3Dモデル「アンドレア」ver2.0 - らてのすのショップ - BOOTH

--- a/VRChat/06/1116606.html
+++ b/VRChat/06/1116606.html
@@ -5,8 +5,7 @@
     <title>
       VRC/VRM/MMD向け3Dモデル「アンドレア」ver2.0 - らてのすのショップ - BOOTH
     </title>
-    <meta name="description" content=
-    "●このモデルについて 自分のオリジナルキャラクターです！ Unitypackageファイルを同梱しているので初心者の方でもUnityでVRCSDKが導入できていればすぐにVRCへ持っていけます！ VRMファイルも同梱しているので対応しているソフトなどでも動作が可能です！ ※UnitypackageからUnityへ導入する際は無料トゥーンシェーダ&quot;Arktoon-Shaders&quot;が導入されていないと正常に動作しません！ Assets内にあらかじめ導入してください！ DynamicBoneに対応したのでUnityにインポートされている場合は使用することができます。">
+    <meta name="description" content="鮫のお姉さんです！">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1116606">
@@ -14,15 +13,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
     "VRC/VRM/MMD向け3Dモデル「アンドレア」ver2.0 - らてのすのショップ - BOOTH">
-    <meta name="twitter:description" content=
-    "●このモデルについて 自分のオリジナルキャラクターです！ Unitypackageファイルを同梱しているので初心者の方でもUnityでVRCSDKが導入できていればすぐにVRCへ持っていけます！ VRMファイルも同梱しているので対応しているソフトなどでも動作が可能です！ ※UnitypackageからUnityへ導入する際は無料トゥーンシェーダ&quot;Arktoon-Shaders&quot;が導入されていないと正常に動作しません！ Assets内にあらかじめ導入してください！ DynamicBoneに対応したのでUnityにインポートされている場合は使用することができます。">
+    <meta name="twitter:description" content="鮫のお姉さんです！">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/a396d0e8-451f-49ff-9a9d-89660f8ae6cd/i/1116606/9e24ba15-3cf2-47df-92b9-78dc7c0ffe8f_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRC/VRM/MMD向け3Dモデル「アンドレア」ver2.0 - らてのすのショップ - BOOTH">
-    <meta property="og:description" content=
-    "●このモデルについて 自分のオリジナルキャラクターです！ Unitypackageファイルを同梱しているので初心者の方でもUnityでVRCSDKが導入できていればすぐにVRCへ持っていけます！ VRMファイルも同梱しているので対応しているソフトなどでも動作が可能です！ ※UnitypackageからUnityへ導入する際は無料トゥーンシェーダ&quot;Arktoon-Shaders&quot;が導入されていないと正常に動作しません！ Assets内にあらかじめ導入してください！ DynamicBoneに対応したのでUnityにインポートされている場合は使用することができます。">
+    <meta property="og:description" content="鮫のお姉さんです！">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/a396d0e8-451f-49ff-9a9d-89660f8ae6cd/i/1116606/9e24ba15-3cf2-47df-92b9-78dc7c0ffe8f_base_resized.jpg">
     <meta property="og:url" content=
@@ -342,26 +339,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            ●このモデルについて 自分のオリジナルキャラクターです！
-                            Unitypackageファイルを同梱しているので初心者の方でもUnityでVRCSDKが導入できていればすぐにVRCへ持っていけます！
-                            VRMファイルも同梱しているので対応しているソフトなどでも動作が可能です！
-                            ※UnitypackageからUnityへ導入する際は無料トゥーンシェーダ"Arktoon-Shaders"が導入されていないと正常に動作しません！
-                            Assets内にあらかじめ導入してください！
-                            DynamicBoneに対応したのでUnityにインポートされている場合は使用することができます。
-                            身長はかなり高いほうです。人間の男性アバターよりも大きいです。
-                            MMDで使えるPMXファイルも用意しているのですぐにMMDで使うことができます。
-                            ●利用について ・無改造のままモデルやテクスチャなどの再配布を行わない。
-                            （著作権は放棄していません） ・販売は禁止です。
-                            以上のことに同意できるならだれでも使うことができます。
-                            ただしVRChatでペデスタルを配置し、だれでも使えるような状態にすることも再配布に当たるとみてるので私の許可がない限りは使用できません。
-                            自作発言も禁止です。
-                            改変やパーツ流用、商用利用、R18などなんでも大丈夫です！
-                            配信やVtuberとして活動してもOK!
-                            クレジット掲載は必要ないですが掲載してくれるとぼくが喜びます！！！！
-                            できれば下記のTwitterIDまで乗せてくれると嬉しいなあぁ！
-                            質問やバグ報告などあれば連絡欲しいです！ Twitter:@latenos_
-                            ●更新内容 ver1.0 モデル公開 ver2.0
-                            UV、テクスチャを改良しました。
+                            鮫のお姉さんです！
                           </p>
                         </div>
                       </section>
