updated at: 2020-01-26 03:26, VRアバター「こぎちゅね姉妹」 - しすたーず！-Sisters!- - BOOTH

--- a/VRChat/22/1105122.html
+++ b/VRChat/22/1105122.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRアバター「こぎちゅね姉妹」 - しすたーず！ - BOOTH
+      VRアバター「こぎちゅね姉妹」 - しすたーず！-Sisters!- - BOOTH
     </title>
     <meta name="description" content=
     "こちらのモデルは最新版のVRChatのバージョンに対応して作成、動作確認されていない可能性があります。下記のモデルのアップデート情報をご確認の上、自己責任でご購入お願いします。尚、現在こちらのモデルのアップデート予定はございません。 本モデルはUnityのHumanoid形式に対応した オリジナルVRモデル「こぎちゅね姉妹」です。 小さな子狐の姉妹をコンセプトとしたちまちまかわいいモデルになっています。揺れものボーンが設定されています。 フルトラでの動作確認済みです！">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRアバター「こぎちゅね姉妹」 - しすたーず！ - BOOTH">
+    "VRアバター「こぎちゅね姉妹」 - しすたーず！-Sisters!- - BOOTH">
     <meta name="twitter:description" content=
     "こちらのモデルは最新版のVRChatのバージョンに対応して作成、動作確認されていない可能性があります。下記のモデルのアップデート情報をご確認の上、自己責任でご購入お願いします。尚、現在こちらのモデルのアップデート予定はございません。 本モデルはUnityのHumanoid形式に対応した オリジナルVRモデル「こぎちゅね姉妹」です。 小さな子狐の姉妹をコンセプトとしたちまちまかわいいモデルになっています。揺れものボーンが設定されています。 フルトラでの動作確認済みです！">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ef40f496-b7db-4dc9-9e06-1127a645a568/i/1105122/f0f747c2-04b0-407d-ab76-c63a1650f819_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRアバター「こぎちゅね姉妹」 - しすたーず！ - BOOTH">
+    "VRアバター「こぎちゅね姉妹」 - しすたーず！-Sisters!- - BOOTH">
     <meta property="og:description" content=
     "こちらのモデルは最新版のVRChatのバージョンに対応して作成、動作確認されていない可能性があります。下記のモデルのアップデート情報をご確認の上、自己責任でご購入お願いします。尚、現在こちらのモデルのアップデート予定はございません。 本モデルはUnityのHumanoid形式に対応した オリジナルVRモデル「こぎちゅね姉妹」です。 小さな子狐の姉妹をコンセプトとしたちまちまかわいいモデルになっています。揺れものボーンが設定されています。 フルトラでの動作確認済みです！">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://sisters.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="しすたーず！" class=
+                            <img alt="しすたーず！-Sisters!-" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/5256354/icon_image/5db672da-5ecf-4d21-9ba8-13eff80a1cd4_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/5256354/icon_image/de9db5c4-1b9c-477c-8d0b-052956e573fc_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              しすたーず！
+                              しすたーず！-Sisters!-
                             </div>
                           </div></a>
                         </div>
@@ -352,7 +352,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1105122"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="VRアバター「こぎちゅね姉妹」 | しすたーず！"
+                          data-text=
+                          "VRアバター「こぎちゅね姉妹」 | しすたーず！-Sisters!-"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
