updated at: 2020-01-26 22:36, 《Ver.2.0》化野干（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH

--- a/VRChat/50/1268050.html
+++ b/VRChat/50/1268050.html
@@ -6,7 +6,7 @@
       《Ver.2.0》化野干（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH
     </title>
     <meta name="description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/1KeCVrU1TBPmNrESR6Et3urgMRHVP5OnQ9hQBg8_ZwtY/edit?usp=sharing ＝＝＝check！！＝＝＝">
+    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/1KeCVrU1TBPmNrESR6Et3urgMRHVP5OnQ9hQBg8_ZwtY/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1268050">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "《Ver.2.0》化野干（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH">
     <meta name="twitter:description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/1KeCVrU1TBPmNrESR6Et3urgMRHVP5OnQ9hQBg8_ZwtY/edit?usp=sharing ＝＝＝check！！＝＝＝">
+    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/1KeCVrU1TBPmNrESR6Et3urgMRHVP5OnQ9hQBg8_ZwtY/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1268050/bc823f34-79bb-44c7-a569-8358f4d00e88_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "《Ver.2.0》化野干（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH">
     <meta property="og:description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/1KeCVrU1TBPmNrESR6Et3urgMRHVP5OnQ9hQBg8_ZwtY/edit?usp=sharing ＝＝＝check！！＝＝＝">
+    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/1KeCVrU1TBPmNrESR6Et3urgMRHVP5OnQ9hQBg8_ZwtY/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1268050/bc823f34-79bb-44c7-a569-8358f4d00e88_base_resized.jpg">
     <meta property="og:url" content=
@@ -357,7 +357,12 @@
                             https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing
                             【説明書】
                             https://docs.google.com/document/d/1KeCVrU1TBPmNrESR6Et3urgMRHVP5OnQ9hQBg8_ZwtY/edit?usp=sharing
-                            ＝＝＝check！！＝＝＝
+                            ＝＝＝check！！＝＝＝ 【注意事項】
+                            仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。
+                            また、当店の対応言語は日本語のみとなります。製作者のBAD言語能力では無理だった。ごめんね！
+                            【更新情報】 データの内容は予告なく修正、変更する可能性があります。
+                            更新があればこちらに掲載していきます。⇒
+                            https://www.pixiv.net/fanbox/creator/26502466
                           </p>
                         </div>
                       </section>
