--- a/VRChat/59/1222859.html
+++ b/VRChat/59/1222859.html
@@ -17,14 +17,14 @@
     <meta name="twitter:description" content=
     "-概要- StrayCatsシリーズ第2弾 オリジナル3Dモデル『クラウン』 クーちゃんのおねえちゃんという設定 -フォルダ内容- ・CrownFBX.fbx 　Body(体),cloches(服),hair(髪)オブジェクトが3つ別れています。 表情シェイプは10種類 　ぐるぐる、ニコ、はっ！？、ハート、トジ、もち、はう、トジR、ジト目、しいたけ。 ・Crown.unitypackage 　マテリアル設定、ダイナミックボーンセットアップなどがすべて完了してあるパッケージです。">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/526de468-47db-407d-b388-1eb3125f54cd/i/1222859/41055416-c046-46d1-99c0-3cd6a8b9ccc9_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/526de468-47db-407d-b388-1eb3125f54cd/i/1222859/980ac8e4-7f41-4f47-9dce-d2b91b9b7453_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "StrayCats vol.2『クラウン』オリジナル3Dモデル - ダランディ製菓 - BOOTH">
     <meta property="og:description" content=
     "-概要- StrayCatsシリーズ第2弾 オリジナル3Dモデル『クラウン』 クーちゃんのおねえちゃんという設定 -フォルダ内容- ・CrownFBX.fbx 　Body(体),cloches(服),hair(髪)オブジェクトが3つ別れています。 表情シェイプは10種類 　ぐるぐる、ニコ、はっ！？、ハート、トジ、もち、はう、トジR、ジト目、しいたけ。 ・Crown.unitypackage 　マテリアル設定、ダイナミックボーンセットアップなどがすべて完了してあるパッケージです。">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/526de468-47db-407d-b388-1eb3125f54cd/i/1222859/41055416-c046-46d1-99c0-3cd6a8b9ccc9_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/526de468-47db-407d-b388-1eb3125f54cd/i/1222859/980ac8e4-7f41-4f47-9dce-d2b91b9b7453_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1222859">
     <meta name="ga:shop" content="UA-67248553-1">
@@ -81,7 +81,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="darandy" data-product-category="127"
         data-product-id="1222859" data-product-list="market_show"
-        data-product-price="3000" data-tracking="detail_item">
+        data-product-price="1500" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -181,7 +181,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 3,000
+                                    ¥ 1,500
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -194,7 +194,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1222859"
-                                      data-product-price="3000"
+                                      data-product-price="1500"
                                       data-product-brand="darandy"
                                       data-product-category="127"
                                       data-product-variant=
@@ -210,7 +210,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1222859"
-                                        data-product-price="3000"
+                                        data-product-price="1500"
                                         data-product-brand=
                                         "darandy"
                                         data-product-category="127"
@@ -260,6 +260,16 @@
                             "StrayCats vol.2『クラウン』オリジナル3Dモデル"
                             class="market-item-detail-item-image"
                             src=
+                            "https://booth.pximg.net/526de468-47db-407d-b388-1eb3125f54cd/i/1222859/980ac8e4-7f41-4f47-9dce-d2b91b9b7453_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "StrayCats vol.2『クラウン』オリジナル3Dモデル"
+                            class="market-item-detail-item-image"
+                            data-lazy=
                             "https://booth.pximg.net/526de468-47db-407d-b388-1eb3125f54cd/i/1222859/41055416-c046-46d1-99c0-3cd6a8b9ccc9_base_resized.jpg">
                           </div>
                         </div>
@@ -286,6 +296,10 @@
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/526de468-47db-407d-b388-1eb3125f54cd/i/1222859/980ac8e4-7f41-4f47-9dce-d2b91b9b7453_base_resized.jpg">
+                        </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/526de468-47db-407d-b388-1eb3125f54cd/i/1222859/41055416-c046-46d1-99c0-3cd6a8b9ccc9_base_resized.jpg">
