--- a/VRChat/69/1126369.html
+++ b/VRChat/69/1126369.html
@@ -375,7 +375,12 @@
                             https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing
                             【説明書】
                             https://docs.google.com/document/d/1S3z9Ok0HDtd0ZVxlGV9RAUatdRryJm61ss9hn5hdwVQ/edit?usp=sharing
-                            ＝＝＝check！！＝＝＝
+                            ＝＝＝check！！＝＝＝ 【注意事項】
+                            仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。
+                            また、当店の対応言語は日本語のみとなります。製作者のBAD言語能力では無理だった。ごめんね！
+                            【更新情報】 データの内容は予告なく修正、変更する可能性があります。
+                            更新があればこちらに掲載していきます。⇒
+                            https://www.pixiv.net/fanbox/creator/26502466
                           </p>
                         </div>
                       </section>
