--- a/VRChat/25/1002225.html
+++ b/VRChat/25/1002225.html
@@ -327,9 +327,14 @@
                             裏面に表示されるテクスチャ ・Scale : 貼りついた際の大きさ
                             ・OffsetX : 貼りついた際の横方向の位置 ・OffsetY :
                             貼りついた際の縦方向の位置 ・Cling Distance :
-                            画面に貼りつく範囲
-                            商用利用・改変は自由に可能ですが、配布に関しては少し制限があります。
-                            詳しくは同封されているREADMEをご確認ください。
+                            画面に貼りつく範囲 商用利用、改変はしていただいて大丈夫です。
+                            ただ配布に関しては無改変での配布は禁止とします。
+                            改変の基準は処理負荷が減るものまたは新機能の追加レベルのものとします。
+                            (変数名の変更など処理が大幅に変更されないものは改変に含まれません)
+                            改変したものを配布する際には不特定多数がダウンロードして利用できるような配布方法は禁止です。
+                            上記のような配布制限をかけている理由は視界ジャックの悪用は良くないので下手に広まってほしくないってだけです。
+                            〇免責事項
+                            本製品を使って発生した問題に対してはgatosyocoraは一切の責任を負いません。
                             Boostもしていただけるとすごく嬉しいです。 2019/8/1
                             ・BatchingやProjectorの影響を受けないように
                             ・UIまわりを変更
