updated at: 2020-01-27 20:40, 【無料】ガーターセット - nullの足音 - BOOTH

--- a/VRChat/57/1340557.html
+++ b/VRChat/57/1340557.html
@@ -6,7 +6,7 @@
       【無料】ガーターセット - nullの足音 - BOOTH
     </title>
     <meta name="description" content=
-    "おしゃれに使えるレッグガーターです。 ガーター部分の長さと角度はシェイプキーである程度変えられるようになっています。すべてのアバターの太ももに沿うのは難しいと思いますが雰囲気だけでも楽しめたらいいですね！ テクスチャなし。standard shaderのマテリアルを同梱してますが、金属部分はワールドによって黒くなってしまうのでご注意ください。 ガーター　ノーマル　△955 ハート　△2304 五芒星　△1164 -------- 2019/5/8 ・有料版として商品を追加しました リボン付き　△1549 靴下止め　△648">
+    "おしゃれに使えるレッグガーターです。 ガーター部分の長さと角度はシェイプキーである程度変えられるようになっています。すべてのアバターの太ももに沿うのは難しいと思いますが雰囲気だけでも楽しめたらいいですね！ ベースになるテクスチャはありません。matcapとmaskでできています。 Arktoon-Shaders設定済materialが同梱してあります。 https://booth.pm/ja/items/1027997 ◆内容物 ・Arktoon Shaders ・fbxファイル ・matcapとmaskテクスチャ ・unitypackage">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1340557">
@@ -15,16 +15,16 @@
     <meta name="twitter:title" content=
     "【無料】ガーターセット - nullの足音 - BOOTH">
     <meta name="twitter:description" content=
-    "おしゃれに使えるレッグガーターです。 ガーター部分の長さと角度はシェイプキーである程度変えられるようになっています。すべてのアバターの太ももに沿うのは難しいと思いますが雰囲気だけでも楽しめたらいいですね！ テクスチャなし。standard shaderのマテリアルを同梱してますが、金属部分はワールドによって黒くなってしまうのでご注意ください。 ガーター　ノーマル　△955 ハート　△2304 五芒星　△1164 -------- 2019/5/8 ・有料版として商品を追加しました リボン付き　△1549 靴下止め　△648">
+    "おしゃれに使えるレッグガーターです。 ガーター部分の長さと角度はシェイプキーである程度変えられるようになっています。すべてのアバターの太ももに沿うのは難しいと思いますが雰囲気だけでも楽しめたらいいですね！ ベースになるテクスチャはありません。matcapとmaskでできています。 Arktoon-Shaders設定済materialが同梱してあります。 https://booth.pm/ja/items/1027997 ◆内容物 ・Arktoon Shaders ・fbxファイル ・matcapとmaskテクスチャ ・unitypackage">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/cb6cae8c-0266-41f0-9afa-02879ff3cd72_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/3d864a3c-d3ae-4c54-8349-b918eecdf4a7_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【無料】ガーターセット - nullの足音 - BOOTH">
     <meta property="og:description" content=
-    "おしゃれに使えるレッグガーターです。 ガーター部分の長さと角度はシェイプキーである程度変えられるようになっています。すべてのアバターの太ももに沿うのは難しいと思いますが雰囲気だけでも楽しめたらいいですね！ テクスチャなし。standard shaderのマテリアルを同梱してますが、金属部分はワールドによって黒くなってしまうのでご注意ください。 ガーター　ノーマル　△955 ハート　△2304 五芒星　△1164 -------- 2019/5/8 ・有料版として商品を追加しました リボン付き　△1549 靴下止め　△648">
+    "おしゃれに使えるレッグガーターです。 ガーター部分の長さと角度はシェイプキーである程度変えられるようになっています。すべてのアバターの太ももに沿うのは難しいと思いますが雰囲気だけでも楽しめたらいいですね！ ベースになるテクスチャはありません。matcapとmaskでできています。 Arktoon-Shaders設定済materialが同梱してあります。 https://booth.pm/ja/items/1027997 ◆内容物 ・Arktoon Shaders ・fbxファイル ・matcapとmaskテクスチャ ・unitypackage">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/cb6cae8c-0266-41f0-9afa-02879ff3cd72_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/3d864a3c-d3ae-4c54-8349-b918eecdf4a7_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1340557">
     <meta name="skip_auto_login" content="">
@@ -178,8 +178,8 @@
                                   <div class="cart-button-wrap">
                                     <a class=
                                     "btn add-cart full-length"
-                                    title="ガーター.zip" href=
-                                    "https://booth.pm/downloadables/574990">
+                                    title="Garter_1.2.zip" href=
+                                    "https://booth.pm/downloadables/882204">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -188,13 +188,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        ガーター
+                                        Garter_1.2
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(430 KB)
+                                        &nbsp;(9.14 MB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -293,7 +293,16 @@
                           "market-item-detail-item-image-wrapper">
                             <img alt="【無料】ガーターセット" class=
                             "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/cb6cae8c-0266-41f0-9afa-02879ff3cd72_base_resized.jpg">
+                            "https://booth.pximg.net/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/3d864a3c-d3ae-4c54-8349-b918eecdf4a7_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="【無料】ガーターセット" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/2b6fd5d5-88ab-4f22-8758-0945d419bd7f_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -323,21 +332,16 @@
                             "https://booth.pximg.net/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/17fff781-a739-4701-a161-7217507e8d50_base_resized.jpg">
                           </div>
                         </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="【無料】ガーターセット" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/c87d2797-974c-4498-a703-2cb87986de05_base_resized.jpg">
-                          </div>
-                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/cb6cae8c-0266-41f0-9afa-02879ff3cd72_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/3d864a3c-d3ae-4c54-8349-b918eecdf4a7_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/2b6fd5d5-88ab-4f22-8758-0945d419bd7f_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
@@ -350,10 +354,6 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/17fff781-a739-4701-a161-7217507e8d50_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1340557/c87d2797-974c-4498-a703-2cb87986de05_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -362,16 +362,16 @@
                           <p class="autolink u-text-wrap">
                             おしゃれに使えるレッグガーターです。
                             ガーター部分の長さと角度はシェイプキーである程度変えられるようになっています。すべてのアバターの太ももに沿うのは難しいと思いますが雰囲気だけでも楽しめたらいいですね！
-                            テクスチャなし。standard
-                            shaderのマテリアルを同梱してますが、金属部分はワールドによって黒くなってしまうのでご注意ください。
-                            ガーター　ノーマル　△955 ハート　△2304 五芒星　△1164
-                            -------- 2019/5/8 ・有料版として商品を追加しました
-                            リボン付き　△1549 靴下止め　△648
+                            ベースになるテクスチャはありません。matcapとmaskでできています。
+                            Arktoon-Shaders設定済materialが同梱してあります。
+                            https://booth.pm/ja/items/1027997 ◆内容物
+                            ・Arktoon Shaders ・fbxファイル
+                            ・matcapとmaskテクスチャ ・unitypackage
                             利用に際して制限はありませんが自作発言や他人に迷惑のかかる使用はおやめください。
                             本データの著作権は作者であるえぬに帰属します。
                             このファイルを使用して発生したトラブルには一切責任を負いません。
-                            何かあればTwitter：@enu_001まで。
-                            TwitterやVRC内で見せてもらえたら嬉しいです。
+                            何かあればTwitter：@enu_001まで。 タグ #nullの足音
+                            でツイートしていただけると嬉しいです。
                           </p>
                         </div>
                       </section>
