updated at: 2020-01-27 20:52, princess tiara - くぷしょっぷ - BOOTH

--- a/VRChat/72/1329172.html
+++ b/VRChat/72/1329172.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      princess tiara - くぷふぁーのお店 - BOOTH
+      princess tiara - くぷしょっぷ - BOOTH
     </title>
     <meta name="description" content=
     "VRChat向けアクセサリーです。 基本的にどこで使ってもOKです。 シェーダーはarktoonですがパッケージに同梱していないのであらかじめ導入しておいてください。 シェーダーは変更していただいてもかまいません。 △440　cloth設定済 改変OK再配布ダメ 問題があればtwitterでお知らせください。 中身は一緒ですがboostしていただけるとむせび喜びます。 1.1は「princess tiara」のリボン/clothなしverです ちなみにサムネイルで使っている クリスタルシェーダー https://booth.pm/ja/items/1148311 量産型のらきゃっと">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "princess tiara - くぷふぁーのお店 - BOOTH">
+    "princess tiara - くぷしょっぷ - BOOTH">
     <meta name="twitter:description" content=
     "VRChat向けアクセサリーです。 基本的にどこで使ってもOKです。 シェーダーはarktoonですがパッケージに同梱していないのであらかじめ導入しておいてください。 シェーダーは変更していただいてもかまいません。 △440　cloth設定済 改変OK再配布ダメ 問題があればtwitterでお知らせください。 中身は一緒ですがboostしていただけるとむせび喜びます。 1.1は「princess tiara」のリボン/clothなしverです ちなみにサムネイルで使っている クリスタルシェーダー https://booth.pm/ja/items/1148311 量産型のらきゃっと">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/feef57ae-26dc-40fa-ae57-cdc26b6cba3f/i/1329172/dad3815a-6336-41a9-90cc-1d89a90cf9c6_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "princess tiara - くぷふぁーのお店 - BOOTH">
+    "princess tiara - くぷしょっぷ - BOOTH">
     <meta property="og:description" content=
     "VRChat向けアクセサリーです。 基本的にどこで使ってもOKです。 シェーダーはarktoonですがパッケージに同梱していないのであらかじめ導入しておいてください。 シェーダーは変更していただいてもかまいません。 △440　cloth設定済 改変OK再配布ダメ 問題があればtwitterでお知らせください。 中身は一緒ですがboostしていただけるとむせび喜びます。 1.1は「princess tiara」のリボン/clothなしverです ちなみにサムネイルで使っている クリスタルシェーダー https://booth.pm/ja/items/1148311 量産型のらきゃっと">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://kupfer2.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="くぷふぁーのお店" class=
+                            <img alt="くぷしょっぷ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5820014/icon_image/34909052-3b56-48da-b2f4-c41e8f1976fa_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              くぷふぁーのお店
+                              くぷしょっぷ
                             </div>
                           </div></a>
                         </div>
@@ -298,7 +298,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1329172"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="princess tiara | くぷふぁーのお店"
+                          data-text="princess tiara | くぷしょっぷ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
