--- a/VRChat/30/1303330.html
+++ b/VRChat/30/1303330.html
@@ -6,7 +6,7 @@
       Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH
     </title>
     <meta name="description" content=
-    "本ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに SpaceCaliblatorで空間補正した場合、 仮想トラッカーも影響を受けてしまっていた問題が修正されています。 強引に補正で乗り切っていた場合は再修正するか 旧Verをご利用ください。 ※トラッカーが下にでてしまう問題の 　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして SteamVRで利用するツールです。 主な用途は腰トラッキングとか。 仮想トラッカー単体、及び">
+    "前ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに SpaceCaliblatorで空間補正した場合、 仮想トラッカーも影響を受けてしまっていた問題が修正されています。 ※トラッカーが下にでてしまう問題の 　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして SteamVRで利用するツールです。 主な用途は腰トラッキングとか。 仮想トラッカー単体、及び 仮想トラッカー(腰)＋KinectToVR(両足)の組み合わせで、">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1303330">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH">
     <meta name="twitter:description" content=
-    "本ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに SpaceCaliblatorで空間補正した場合、 仮想トラッカーも影響を受けてしまっていた問題が修正されています。 強引に補正で乗り切っていた場合は再修正するか 旧Verをご利用ください。 ※トラッカーが下にでてしまう問題の 　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして SteamVRで利用するツールです。 主な用途は腰トラッキングとか。 仮想トラッカー単体、及び">
+    "前ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに SpaceCaliblatorで空間補正した場合、 仮想トラッカーも影響を受けてしまっていた問題が修正されています。 ※トラッカーが下にでてしまう問題の 　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして SteamVRで利用するツールです。 主な用途は腰トラッキングとか。 仮想トラッカー単体、及び 仮想トラッカー(腰)＋KinectToVR(両足)の組み合わせで、">
     <meta name="twitter:image" content=
     "https://asset.booth.pm/assets/og_image-f5671bd0a69c6bd18bf956838ee53a25aa27c49270b213859b2f67ba5d3d03c2.png">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH">
     <meta property="og:description" content=
-    "本ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに SpaceCaliblatorで空間補正した場合、 仮想トラッカーも影響を受けてしまっていた問題が修正されています。 強引に補正で乗り切っていた場合は再修正するか 旧Verをご利用ください。 ※トラッカーが下にでてしまう問題の 　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして SteamVRで利用するツールです。 主な用途は腰トラッキングとか。 仮想トラッカー単体、及び">
+    "前ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに SpaceCaliblatorで空間補正した場合、 仮想トラッカーも影響を受けてしまっていた問題が修正されています。 ※トラッカーが下にでてしまう問題の 　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして SteamVRで利用するツールです。 主な用途は腰トラッキングとか。 仮想トラッカー単体、及び 仮想トラッカー(腰)＋KinectToVR(両足)の組み合わせで、">
     <meta property="og:image" content=
     "https://asset.booth.pm/assets/og_image-f5671bd0a69c6bd18bf956838ee53a25aa27c49270b213859b2f67ba5d3d03c2.png">
     <meta property="og:url" content=
@@ -179,9 +179,9 @@
                                     <a class=
                                     "btn add-cart full-length"
                                     title=
-                                    "OculusVirtualTracker120.zip"
+                                    "OculusVirtualTracker130.zip"
                                     href=
-                                    "https://booth.pm/downloadables/879440">
+                                    "https://booth.pm/downloadables/882708">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -190,13 +190,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        OculusVirtualTracker120
+                                        OculusVirtualTracker130
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(70 KB)
+                                        &nbsp;(375 KB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -354,6 +354,28 @@
                                       <div>
                                         &nbsp;(70.2 KB)
                                       </div>
+                                    </div></a><a class=
+                                    "btn add-cart full-length"
+                                    title=
+                                    "OculusVirtualTracker120.zip"
+                                    href=
+                                    "https://booth.pm/downloadables/879440">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        OculusVirtualTracker120
+                                      </div>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(70 KB)
+                                      </div>
                                     </div></a>
                                   </div>
                                 </div>
@@ -400,10 +422,9 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            本ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに
+                            前ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに
                             SpaceCaliblatorで空間補正した場合、
                             仮想トラッカーも影響を受けてしまっていた問題が修正されています。
-                            強引に補正で乗り切っていた場合は再修正するか 旧Verをご利用ください。
                             ※トラッカーが下にでてしまう問題の
                             　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要]
                             3個めのOculus Touchを仮想のトラッカーとして
@@ -426,35 +447,46 @@
                             　下記URLからダウンロード。
                             (OpenVR-InputEmulator-v???.exe というリンク)
                             https://github.com/matzman666/OpenVR-InputEmulator/releases
-                            [利用方法] 1) STEAM VRを起動しておきます(重要) 2)
-                            他のTouchコントローラのボタンに触れて電源を入れておきます 3) VR
-                            objectにしたTouchコントローラに電池を入れます。 4)
+                            [利用方法] 1) STEAM VRを起動しておきます(重要) 2) VR
+                            objectにしたTouchコントローラに電池を入れます。 3)
                             OculusVirtualTracker(このアプリ)を実行
-                            ※2～4は順不同で大丈夫なはず
+                            ※2～3は順不同で大丈夫なはず
                             以上で仮想トラッカーがOculus画面上に現れているはずです。
                             …だったのですが、Steamのアップデートの仕様変更で
-                            主に下方向にズレるという現象が起きています。
-                            対処方法は、[位置補正]の項目を参照。
-                            OculusVirtualTrackerがエラーで起動しない場合、
+                            主に下方向にズレるという現象が起きています。 対処方法は、次項 [位置補正]
+                            を参照。 OculusVirtualTrackerがエラーで起動しない場合、
                             以下のランタイムを導入することで解決するかもしれません。
                             https://www.microsoft.com/ja-jp/download/details.aspx?id=53587
                             終了はCTRL+Cで。 閉じるボタンでもいいんですが、
                             仮想トラッカーが止まったまま残ります。
                             アプリによってうまく利用できないときは、
                             SteamVRのトラッカー設定で役割設定したり
-                            逆に無効にしたりしてみるといいでしょう。 [位置補正]
+                            逆に無効にしたりしてみるといいでしょう。 [位置補正(オフセット)]
                             トラッカーの位置を補正するには SteamVRのダッシュボードにある
                             OpenVR InputEmulatorを開いて、Deviceで「VR
                             Object(Tracker)」を選択、
                             DeviceOffsetsを開いて、位置を補正後に左上の←で戻り、
-                            NewProfileで名前をつけて保存すれば、
-                            SteamVR起動ごとにDevice選択→Profileを選んでApplyで位置補正がされます。
+                            NewProfileで名前をつけ、Include DeviceOffsets
+                            をチェックして保存すれば、
+                            SteamVR起動ごとにDevice選択→Profileを選んで
+                            Applyで位置補正がされます。 次項の [オフセットの保存と自動読み込み]
+                            で、 補正したオフセット値の保存と自動再適用も可能です。
                             補正値は環境によりますが、当方では以下でだいたいあっていますので参考に
-                            調整てみたください。 WorldFromDriver Offsetの
+                            微調整してみてください。 WorldFromDriver Offsetの
                             Y:85.0 DriverFromHeadOffsetsの Pitch
-                            20.0度 調整する際は、SteamVR起動直後にオプション -ml か
+                            25.0度 調整する際は、SteamVR起動直後にオプション -ml か
                             -mrで仮想トラッカーを
                             起動すると表示モデルがTouchになるので活用してみてください。
+                            [オフセットの保存と自動読み込み]
+                            InputEmulatorで位置補正した後、OculusVirtualTrackerの画面で
+                            CTRL+Oキー(アルファベット)でオフセット値が保存されます。
+                            保存されたオフセット値は、仮想トラッカー起動時に自動で読み込まれ
+                            適用・反映されます。
+                            ただし、InputEmulatorのDeviceOffset画面には見た目上数値が
+                            反映されないので、修正するときは一度プロファイルを適用するか
+                            一旦クリアして修正を行ってください。 (CTRL+Sによる再保存も忘れずに)
+                            自動読み込みを無効にするには、「OculusVirtualTracker.exe」と
+                            同じフォルダに生成された「offset.dat」を削除してください。
                             [起動オプション] -h オプションの表示 -mt トラッカーモデルを
                             [汎用トラッカー] に設定(デフォルト) -mv トラッカーモデルを
                             [VIVEコントローラー] に設定 -ml トラッカーモデルを [Oculus
@@ -465,8 +497,12 @@
                             コントローラーと違い、仮想トラッカーは
                             トラッキングを失うと姿勢(角度)情報も更新されなくなります。
                             これはOculusSDKの問題で、改善の要望を出してはいますが
-                            現在のところは仕様です。 [更新履歴] 2020 1/23 V1.2
-                            HTCトラッカーを併用する場合など、SpaceCalibratorで
+                            現在のところは仕様です。 [更新履歴] 2020 1/29 V1.3
+                            仮想トラッカーにInputEmulatorで設定した
+                            オフセット値を自前で保存・自動再適用できるようにした。
+                            仮想トラッカーを追加する際、他のアプリケーションが
+                            IEを利用して追加した仮想デバイスを乗っ取る問題を修正。 2020 1/23
+                            V1.2 HTCトラッカーを併用する場合など、SpaceCalibratorで
                             LightHouse空間の補正した場合、HTCトラッカーに
                             偽装していた関係で仮想トラッカーも影響を受けていたので、
                             Oculus空間の所属に変更した。
