updated at: 2020-01-28 02:38, CV缶（ガス缶）の３Dモデル - あやしいてっく（みつ） - BOOTH

--- a/VRChat/07/1351607.html
+++ b/VRChat/07/1351607.html
@@ -81,7 +81,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="ayashiimitsu" data-product-category=
         "127" data-product-id="1351607" data-product-list=
-        "market_show" data-product-price="200" data-tracking=
+        "market_show" data-product-price="0" data-tracking=
         "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -170,49 +170,32 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 200
+                                    ¥ 0
                                   </div>
                                 </div>
                                 <div class="variation-cart">
                                   <div class="cart-button-wrap">
-                                    <form class="button_to" method=
-                                    "post" action=
-                                    "https://ayashiimitsu.booth.pm/cart?added_to_cart=true&amp;via=market">
-                                      <input type="hidden" name=
-                                      "_method" value=
-                                      "patch"><button class=
-                                      "btn add-cart full-length"
-                                      data-product-id="1351607"
-                                      data-product-price="200"
-                                      data-product-brand=
-                                      "ayashiimitsu"
-                                      data-product-category="127"
-                                      data-product-variant=
-                                      "2107047" data-tracking=
-                                      "add_item" data-product-list=
-                                      "from market_show via market to add_item"
-                                      type="submit"><input type=
-                                      "hidden" name=
-                                      "cart_item[variation_id]" id=
-                                      "cart_item_variation_id"
-                                      value="2107047"></button>
-                                      <div class="cmd-label">
-                                        <button class=
-                                        "btn add-cart full-length"
-                                        data-product-id="1351607"
-                                        data-product-price="200"
-                                        data-product-brand=
-                                        "ayashiimitsu"
-                                        data-product-category="127"
-                                        data-product-variant=
-                                        "2107047" data-tracking=
-                                        "add_item"
-                                        data-product-list=
-                                        "from market_show via market to add_item"
-                                        type=
-                                        "submit">カートに入れる</button>
+                                    <a class=
+                                    "btn add-cart full-length"
+                                    title="CV缶.zip" href=
+                                    "https://booth.pm/downloadables/832388">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        CV缶
                                       </div>
-                                    </form>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(5.18 MB)
+                                      </div>
+                                    </div></a>
                                   </div>
                                 </div>
                               </div>
