--- a/VRChat/83/1136883.html
+++ b/VRChat/83/1136883.html
@@ -6,7 +6,7 @@
       ツインイヤーカフ - CaTrusty - BOOTH
     </title>
     <meta name="description" content=
-    "翼とハートの対になったイヤーカフ風アクセサリーです。 ケモミミでピアス風につけたり、服に飾りとしてつけたり。 色をお好みに変更して、カップルで片側ずつつけたりしてみても！ ～内容物～ ・unitypackage ・FBX ・テクスチャ ～詳細～ ・三角面数 　大きい方：176 　小さい方：189 　クリスタル飾り：48 ・まんまるしぇーだー適用済み 　※必要に応じて最新版のシェーダーをご使用ください。 ・ダイナミックボーン対応 ・prefabやシーンデータ込み↓ 　MMS適用のもの、両面表示standardシェーダー適用（ノーマルマップ込）のもの 　上記二つの揺れ方が違うバージョン二つ">
+    "翼とハートの対になったイヤーカフ風アクセサリーです。 ケモミミでピアス風につけたり、服に飾りとしてつけたり。 カップルで片側ずつつけたりしてみても！">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1136883">
@@ -15,16 +15,16 @@
     <meta name="twitter:title" content=
     "ツインイヤーカフ - CaTrusty - BOOTH">
     <meta name="twitter:description" content=
-    "翼とハートの対になったイヤーカフ風アクセサリーです。 ケモミミでピアス風につけたり、服に飾りとしてつけたり。 色をお好みに変更して、カップルで片側ずつつけたりしてみても！ ～内容物～ ・unitypackage ・FBX ・テクスチャ ～詳細～ ・三角面数 　大きい方：176 　小さい方：189 　クリスタル飾り：48 ・まんまるしぇーだー適用済み 　※必要に応じて最新版のシェーダーをご使用ください。 ・ダイナミックボーン対応 ・prefabやシーンデータ込み↓ 　MMS適用のもの、両面表示standardシェーダー適用（ノーマルマップ込）のもの 　上記二つの揺れ方が違うバージョン二つ">
+    "翼とハートの対になったイヤーカフ風アクセサリーです。 ケモミミでピアス風につけたり、服に飾りとしてつけたり。 カップルで片側ずつつけたりしてみても！">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/f903a6c0-94d8-446c-a560-57e23889c115_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/fb945d73-ce9f-4423-b3ba-57d223974baf_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "ツインイヤーカフ - CaTrusty - BOOTH">
     <meta property="og:description" content=
-    "翼とハートの対になったイヤーカフ風アクセサリーです。 ケモミミでピアス風につけたり、服に飾りとしてつけたり。 色をお好みに変更して、カップルで片側ずつつけたりしてみても！ ～内容物～ ・unitypackage ・FBX ・テクスチャ ～詳細～ ・三角面数 　大きい方：176 　小さい方：189 　クリスタル飾り：48 ・まんまるしぇーだー適用済み 　※必要に応じて最新版のシェーダーをご使用ください。 ・ダイナミックボーン対応 ・prefabやシーンデータ込み↓ 　MMS適用のもの、両面表示standardシェーダー適用（ノーマルマップ込）のもの 　上記二つの揺れ方が違うバージョン二つ">
+    "翼とハートの対になったイヤーカフ風アクセサリーです。 ケモミミでピアス風につけたり、服に飾りとしてつけたり。 カップルで片側ずつつけたりしてみても！">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/f903a6c0-94d8-446c-a560-57e23889c115_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/fb945d73-ce9f-4423-b3ba-57d223974baf_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1136883">
     <meta name="skip_auto_login" content="">
@@ -80,7 +80,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="catrusty" data-product-category="127"
         data-product-id="1136883" data-product-list="market_show"
-        data-product-price="300" data-tracking="detail_item">
+        data-product-price="500" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -168,7 +168,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 300
+                                    ¥ 500
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -181,7 +181,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1136883"
-                                      data-product-price="300"
+                                      data-product-price="500"
                                       data-product-brand="catrusty"
                                       data-product-category="127"
                                       data-product-variant=
@@ -197,7 +197,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1136883"
-                                        data-product-price="300"
+                                        data-product-price="500"
                                         data-product-brand=
                                         "catrusty"
                                         data-product-category="127"
@@ -244,7 +244,7 @@
                           "market-item-detail-item-image-wrapper">
                             <img alt="ツインイヤーカフ" class=
                             "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/f903a6c0-94d8-446c-a560-57e23889c115_base_resized.jpg">
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/fb945d73-ce9f-4423-b3ba-57d223974baf_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -253,7 +253,16 @@
                             <img alt="ツインイヤーカフ" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/f4a2746d-6f70-45f5-ac31-f3c7154b471f_base_resized.jpg">
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/0e7a0423-0983-402e-a875-660493d3c884_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="ツインイヤーカフ" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/8ba969ef-4f7b-4fd2-a31e-941495915e20_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -261,11 +270,15 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/f903a6c0-94d8-446c-a560-57e23889c115_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/fb945d73-ce9f-4423-b3ba-57d223974baf_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/f4a2746d-6f70-45f5-ac31-f3c7154b471f_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/0e7a0423-0983-402e-a875-660493d3c884_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/8ba969ef-4f7b-4fd2-a31e-941495915e20_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -274,16 +287,7 @@
                           <p class="autolink u-text-wrap">
                             翼とハートの対になったイヤーカフ風アクセサリーです。
                             ケモミミでピアス風につけたり、服に飾りとしてつけたり。
-                            色をお好みに変更して、カップルで片側ずつつけたりしてみても！ ～内容物～
-                            ・unitypackage ・FBX ・テクスチャ ～詳細～ ・三角面数
-                            　大きい方：176 　小さい方：189 　クリスタル飾り：48
-                            ・まんまるしぇーだー適用済み
-                            　※必要に応じて最新版のシェーダーをご使用ください。 ・ダイナミックボーン対応
-                            ・prefabやシーンデータ込み↓
-                            　MMS適用のもの、両面表示standardシェーダー適用（ノーマルマップ込）のもの
-                            　上記二つの揺れ方が違うバージョン二つ
-                            ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）
-                            https://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing
+                            カップルで片側ずつつけたりしてみても！
                           </p>
                         </div>
                       </section>
@@ -314,6 +318,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 3D
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B5%E3%83%AA">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                アクセサリ
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
