updated at: 2020-01-28 17:37, 【VRChat】オリジナル3Dモデル「アサルトフレーム00:デルタ」 - 工房鉄鋸 - BOOTH

--- a/VRChat/30/1047430.html
+++ b/VRChat/30/1047430.html
@@ -6,7 +6,7 @@
       【VRChat】オリジナル3Dモデル「アサルトフレーム00:デルタ」 - 工房鉄鋸 - BOOTH
     </title>
     <meta name="description" content=
-    "アサルトフレーム002：空戦機「デルタ」 VRChatのアバターとして使う事を前提としたロボモデルの第二弾 三角・翼がない・でも飛べそうと言ったところをイメージ シェイプキーで刀身の長さを変えられる剣と片手持ち想定の銃が付属">
+    "アサルトフレーム002：空戦機「デルタ」 VRChatのアバターとして使う事を前提としたロボモデルの第二弾 三角・翼がない・でも飛べそうと言ったところをイメージ シェイプキーで刀身の長さを変えられる剣と片手持ち想定の銃が付属 2020/01/28 ふぃぎゅあばたー参加モデルになりました">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1047430">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【VRChat】オリジナル3Dモデル「アサルトフレーム00:デルタ」 - 工房鉄鋸 - BOOTH">
     <meta name="twitter:description" content=
-    "アサルトフレーム002：空戦機「デルタ」 VRChatのアバターとして使う事を前提としたロボモデルの第二弾 三角・翼がない・でも飛べそうと言ったところをイメージ シェイプキーで刀身の長さを変えられる剣と片手持ち想定の銃が付属">
+    "アサルトフレーム002：空戦機「デルタ」 VRChatのアバターとして使う事を前提としたロボモデルの第二弾 三角・翼がない・でも飛べそうと言ったところをイメージ シェイプキーで刀身の長さを変えられる剣と片手持ち想定の銃が付属 2020/01/28 ふぃぎゅあばたー参加モデルになりました">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/a9f17602-dcf5-4174-9a68-d5d63ad5f2f5/i/1047430/288944c4-6ab5-45d6-ba6c-4e86c22589dc_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【VRChat】オリジナル3Dモデル「アサルトフレーム00:デルタ」 - 工房鉄鋸 - BOOTH">
     <meta property="og:description" content=
-    "アサルトフレーム002：空戦機「デルタ」 VRChatのアバターとして使う事を前提としたロボモデルの第二弾 三角・翼がない・でも飛べそうと言ったところをイメージ シェイプキーで刀身の長さを変えられる剣と片手持ち想定の銃が付属">
+    "アサルトフレーム002：空戦機「デルタ」 VRChatのアバターとして使う事を前提としたロボモデルの第二弾 三角・翼がない・でも飛べそうと言ったところをイメージ シェイプキーで刀身の長さを変えられる剣と片手持ち想定の銃が付属 2020/01/28 ふぃぎゅあばたー参加モデルになりました">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/a9f17602-dcf5-4174-9a68-d5d63ad5f2f5/i/1047430/288944c4-6ab5-45d6-ba6c-4e86c22589dc_base_resized.jpg">
     <meta property="og:url" content=
@@ -296,6 +296,7 @@
                             VRChatのアバターとして使う事を前提としたロボモデルの第二弾
                             三角・翼がない・でも飛べそうと言ったところをイメージ
                             シェイプキーで刀身の長さを変えられる剣と片手持ち想定の銃が付属
+                            2020/01/28 ふぃぎゅあばたー参加モデルになりました
                           </p>
                         </div>
                       </section>
@@ -382,6 +383,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 VRC想定モデル(アバター)
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%81%B5%E3%81%83%E3%81%8E%E3%82%85%E3%81%82%E3%81%B0%E3%81%9F%E3%83%BC">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                ふぃぎゅあばたー
                               </div>
                             </div></a>
                           </div>
