updated at: 2020-01-28 18:06, オリジナル3Dモデル：主力量産機「ゲ・スゥ」 - 工房鉄鋸 - BOOTH

--- a/VRChat/38/1344638.html
+++ b/VRChat/38/1344638.html
@@ -327,7 +327,7 @@
                             本体にリップシンクで目を点滅させるためのシェイプキー追加 Atelier
                             Alcaさんで発売中の"I-s(アイズ)"向けのアーマーモデルを追加
                             https://atelier-alca.booth.pm/items/1572567
-                            動く姿はこちら↓
+                            2020/01/28 ふぃぎゅあばたー参加モデル化 動く姿はこちら↓
                             https://hub.vroid.com/characters/6644538918047538481/models/2721904841891968885
                           </p>
                         </div>
@@ -467,6 +467,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 Project Assault Dress
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%81%B5%E3%81%83%E3%81%8E%E3%82%85%E3%81%82%E3%81%B0%E3%81%9F%E3%83%BC">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                ふぃぎゅあばたー
                               </div>
                             </div></a>
                           </div>
